syntax = "proto3";

package demo;
option go_package = "proto/demo";

message IngestRequest {
  int64 uuid = 1;
}

message IngestResponse {
  string result = 1;
}

service IngestService {
  rpc Ingest(IngestRequest) returns (stream IngestResponse) {};
}

message RCARequest {
  string customerId = 1;
  string companyId = 2;
}

message RCAResponse {
  string result = 1;
}

service RCAService {
  rpc Firstview(RCARequest) returns (RCAResponse) {};
}

message CounterRequest {
  string uuid = 1;
  int32 input = 2;
}

message CounterResponse {
  int32 sum = 1;
  int32 quotient = 2;
}

message ModRequest {
  bool enable = 1;
}

message ModResponse {
  string response = 1;
}

service CounterService {
  rpc Count(stream CounterRequest) returns (stream CounterResponse) {};
  rpc EnableMod(ModRequest) returns (ModResponse) {};
}